# rust-ffmpeg-drop-problem

./: .gitignore  Cargo.toml
src/: main.rs
